--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   "scripts": {
     "start": "node index.js"
   },
-  "author": "YourName",
+  "author": "Karthik_Dev",
   "license": "MIT",
   "dependencies": {
     "dotenv": "^16.3.1",
